--- a/_includes/team.html
+++ b/_includes/team.html
@@ -9,14 +9,9 @@
           <div class="row">
         {% endif %}
         <div class="col-md-2">
-          <img src="{{member.img-src}}" class="img-circle img-responsive">
+          <img src="{{member.img-src}}" class="img-circle img-responsive" style="display:inline-block">
           <h3>{{member.name}}</h3>
           <h5>{{member.title}}</h5>
-          <p>
-            {% if member.linkedin != null %} <a href="{{member.linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a>{% endif %}
-            {% if member.github != null %} <a href="{{member.github}}" target="_blank"><i class="fa fa-github"></i></a>{% endif %}
-            {% if member.personal != null %} <a href="{{member.personal}}" target="_blank"><i class="fa fa-link"></i></a>{% endif %}
-          </p>
         </div>
       {% endfor %}
     </div>
