made button font biko

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -125,6 +125,7 @@ section.social-media {
     .btn {
       background-color: {{site.background_color}};
       color: black;
+      font-family: Biko;
     }
 }
 
