--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,44 +2,27 @@
   
   <div class="container">
     <div class="row">
-      
-        <div class="col-sm-6">
-          <ul class="list-inline">
-            {% for link in site.data.footer_links %}
-              <li>{%if link.url%}<a class="text-imp" target="_blank" href="{{ link.url }}">{%endif%}{{ link.name |upcase }}{%if link.url%}</a>{%endif%}</li>
-            {%endfor%}
-          </ul>
+        <div class="social-icons col-sm-6 text-left text-center-xs">
+          <a href="mailto:{{site.email}}">{{site.email}}</a>
         </div>
         <div class="social-icons col-sm-6 text-right text-center-xs">
           {%unless site.instagram == null %}
-        <a class="btns" target="_blank" href="https://www.instagram.com/{{ site.instagram }}/?hl=en"><i aria-hidden="true" class="fa fa-instagram fa-lg"></i></a> 
-      {%endunless%}
-      {%unless site.fb == null %}
-        <a class="btns" target="_blank" href="http://fb.com/{{site.fb}}"><i aria-hidden="true" class="fa fa-facebook fa-lg"></i></a> 
-      {%endunless%}
-      {%unless site.email == null %}
-        <a class="btns" target="_blank" href="mailto:{{site.email}}"><i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i></a>
-      {%endunless%}
-      {%unless site.twitter == null %}
-        <a class="btns" target="_blank" href="https://twitter.com/{{site.twitter}}"><i aria-hidden="true" class="fa fa-twitter fa-lg"></i></a>
-      {%endunless%}
-      {%unless site.github-org == null %}
-        <a class="btns" target="_blank" href="https://github.com/{{site.github-org}}/"><i aria-hidden="true" class="fa fa-github fa-lg"></i></a>
-      {%endunless%}
+            <a class="btns" target="_blank" href="https://www.instagram.com/{{ site.instagram }}/?hl=en"><i aria-hidden="true" class="fa fa-instagram fa-lg"></i></a> 
+          {%endunless%}
+          {%unless site.fb == null %}
+            <a class="btns" target="_blank" href="https://fb.com/{{site.fb}}"><i aria-hidden="true" class="fa fa-facebook fa-lg"></i></a> 
+          {%endunless%}
+          {%unless site.email == null %}
+            <a class="btns" target="_blank" href="mailto:{{site.email}}"><i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i></a>
+          {%endunless%}
+          {%unless site.twitter == null %}
+            <a class="btns" target="_blank" href="https://twitter.com/{{site.twitter}}"><i aria-hidden="true" class="fa fa-twitter fa-lg"></i></a>
+          {%endunless%}
+          {%unless site.github-org == null %}
+            <a class="btns" target="_blank" href="https://github.com/{{site.github-org}}/"><i aria-hidden="true" class="fa fa-github fa-lg"></i></a>
+          {%endunless%}
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-6">
-      <ul class="list-inline">
-            {% for link in site.data.partners %}
-              <li>{%if link.url%}<a target="_blank" href="{{ link.url }}">{%endif%}{{ link.name }}{%if link.url%}</a>{%endif%}</li>
-            {%endfor%}
-          </ul>
-    </div>
-        <div class="social-icons col-sm-6 text-right text-center-xs">
-          <a href="mailto:{{site.email}}">{{site.email}}</a>
-        </div>
-    </div>
     <div class="row">
       <div class="col-md-12 text-center">
         <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by {{site.author}} </p>
