--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         		<h1>Our Story</h1>
 				<p class="lead">{{site.story}}</p>
 				<h1>Our Mission</h1>
-       			<h3 class="lead">{{site.mission}}</h3>
+       			<p class="lead">{{site.mission}}</p>
 			</div>
 			<div class="col-md-5 col-md-offset-2 text-center">
 				<h1>The Team</h1>
