--- a/_includes/team.html
+++ b/_includes/team.html
@@ -2,7 +2,8 @@
   <div class="container">
     <h1>Current Team</h1>
     <div class="row auto-clear">
-      {% for member in site.data.team %}
+      {% assign sorted = site.data.team | sort: 'name','last' %}
+      {% for member in sorted %}
         <div class="col-md-2 center-block">
           {% if member.url %}<a href="{{member.url}}" target="_blank">{%endif%}
             <img src="{% if member.img-src %}{{member.img-src}}{%else%}/assets/img/team/placeholder.jpg{%endif%}" class="img-circle img-responsive" style="display:inline-block">
