--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,5 +17,22 @@
 				<p class="lead">{{site.team-description}}</p>
 			</div>
 		</div>
+		<div class="row events">
+				<div class="col-md-12 text-center">
+					<h1>Our events</h1>
+					<p class="lead">{{site.events-description}}</p>
+					<div class="row auto-clear">
+					{% for event in site.data.events %}
+						<div class="col-md-3" >
+							<a href="{{event.url}}" target="_blank">
+								<div class="image" style='background: linear-gradient(rgba(97, 98 ,116 , .5), rgba(97, 98 ,116 , .5)), url("{{event.img-src}}") no-repeat center center/cover'>
+									<span>{{event.title}}</span>
+								</div>
+							</a>
+						</div>
+					{% endfor %}
+					</div>
+				</div>
+			</div>
 	</div>
 </header>
