--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,17 @@
 				<p class="lead">{{site.team-description}}</p>
 			</div>
 		</div>
+	</div>
+	<div class="container-fluid">
 		<div class="row events">
 				<div class="col-md-12 text-center">
 					<h1>Our events</h1>
 					<p class="lead">{{site.events-description}}</p>
 					<div class="row auto-clear">
+						<div class="col-md-1" >
+						</div>
 					{% for event in site.data.events %}
-						<div class="col-md-3" >
+						<div class="col-md-2" >
 							<a href="{{event.url}}" target="_blank">
 								<div class="image" style='background: linear-gradient(rgba(97, 98 ,116 , .5), rgba(97, 98 ,116 , .5)), url("{{event.img-src}}") no-repeat center center/cover'>
 									<span>{{event.title}}</span>
