--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,7 @@
 				<div class="col-md-12 text-center">
 					<h1>Our events</h1>
 					<p class="lead">{{site.events-description}}</p>
-					<div class="row auto-clear">
-						<div class="col-md-1" >
-						</div>
+					<div class="row auto-clear event_container">
 					{% for event in site.data.events %}
 						<div class="col-md-2" >
 							<a href="{{event.url}}" target="_blank">
