--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -96,6 +96,11 @@ section.social-media {
         }
  
     }
+
+    .event_container {
+      display: flex;
+      justify-content: center;
+    }
  }
 
 .team {
@@ -107,6 +112,7 @@ section.social-media {
   .row {
     margin: 10px;
   }
+
   img {
     @include box-shadow( 0px 0px 2px 2px rgba(0, 0, 0, 0.2));
   }
