--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 	<div class="container-fluid">
 		<div class="row events">
 				<div class="col-md-12 text-center">
-					<h1>Our events</h1>
+					<h1>Our Events</h1>
 					<p class="lead">{{site.events-description}}</p>
 					<div class="row auto-clear event_container">
 					{% for event in site.data.events %}
