--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,9 @@
 				<div class="col-md-12 text-center">
 					<h1>Our Events</h1>
 					<p class="lead">{{site.events-description}}</p>
-					<div class="row auto-clear event_container">
+					<div class="row auto-clear">
+						<div class="col-md-2" >
+						</div>
 					{% for event in site.data.events %}
 						<div class="col-md-2" >
 							<a href="{{event.url}}" target="_blank">
