--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
 
 
     <!--FACEBOOK DESCRIPTION -->
-    <meta property="og:title" content="{{ page.title }} | {{ site.name }}"/>
+    <meta property="og:title" content="{{ site.name }}"/>
     <meta property="og:site_name" content="{{ site.name }}"/>
     <meta property="og:description" content="{{ page.description | default: site.description }}"/>
     <meta property="og:image" content="http://{{site.domain}}/{{ page.og | default: site.og }}">
