fixing bug on smaller screens

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
 						<div class="col-md-2" >
 							<a href="{{event.url}}" target="_blank">
 								<div class="image" style='background: linear-gradient(rgba(97, 98 ,116 , .5), rgba(97, 98 ,116 , .5)), url("{{event.img-src}}") no-repeat center center/cover'>
-									<span>{{event.title}}</span>
+									<p class="event-text">{{event.title}}</p>
 								</div>
 							</a>
 						</div>
