apps about to open, 2020-21

--- a/_includes/apply.html
+++ b/_includes/apply.html
@@ -20,7 +20,7 @@
                     <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                         <rect class="shape" height="40" width="150"/>
                         <div class="text">
-                            <a href="https://hackcu.typeform.com/to/zprLHP" target="_blank">Apply</a>
+                            <a href="https://forms.gle/mG5yku2Wp2bnfFBY9" target="_blank">Apply</a>
                         </div>
                     </svg>
                 </div>
