team apps are filled!

--- a/_includes/apply.html
+++ b/_includes/apply.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
           {% else %}
-            <h2>We currently have no open positions :'(</h2>
+            <h2>We will no longer be accepting applications for the 2020-2021 school year :'(</h2>
             <p>However, if you are really interested in joining and/or knowing more about us, we would like to hear from you! Send us an email!</p>
             <br>
             <div class="buttons ">
